--- a/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.fr.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.fr.resx
@@ -129,11 +129,20 @@
   <data name="level" xml:space="preserve">
     <value>NIVEAU</value>
   </data>
+  <data name="MCTSUrl" xml:space="preserve">
+    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-fra.html</value>
+  </data>
   <data name="More Details" xml:space="preserve">
     <value>Plus de détails</value>
   </data>
   <data name="noshoreside" xml:space="preserve">
     <value>Aucune position côté rivage disponible</value>
+  </data>
+  <data name="PDAPText" xml:space="preserve">
+    <value>Programme d'apprentissage de perfectionnement professionnel (PDAP)</value>
+  </data>
+  <data name="pdapUrl" xml:space="preserve">
+    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-fra.html</value>
   </data>
   <data name="position" xml:space="preserve">
     <value>POSTE</value>
