--- a/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.resx
@@ -120,11 +120,20 @@
   <data name="level" xml:space="preserve">
     <value>LEVEL</value>
   </data>
+  <data name="MCTSUrl" xml:space="preserve">
+    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-eng.html</value>
+  </data>
   <data name="More Details" xml:space="preserve">
     <value>More Details</value>
   </data>
   <data name="noshoreside" xml:space="preserve">
     <value>No shore side positions available</value>
+  </data>
+  <data name="PDAPText" xml:space="preserve">
+    <value>Professional Development Apprenticeship Program (PDAP)</value>
+  </data>
+  <data name="pdapUrl" xml:space="preserve">
+    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-eng.html</value>
   </data>
   <data name="position" xml:space="preserve">
     <value>POSITION</value>
