--- a/Web/Resources/Pages/Homepage.resx
+++ b/Web/Resources/Pages/Homepage.resx
@@ -117,49 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Available" xml:space="preserve">
-    <value>What positions are available to me now</value>
+  <data name="CCGMember" xml:space="preserve">
+    <value>CCG Member</value>
   </data>
-  <data name="Close" xml:space="preserve">
-    <value>Close</value>
+  <data name="ExternalCandidate" xml:space="preserve">
+    <value>External Candidate</value>
   </data>
-  <data name="Compare" xml:space="preserve">
-    <value>Compare my position to another position</value>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
   </data>
-  <data name="Compare Function" xml:space="preserve">
-    <value>The Compare Function</value>
+  <data name="IndexTitle" xml:space="preserve">
+    <value>Career Competency Tool</value>
   </data>
-  <data name="contcompare" xml:space="preserve">
-    <value>Continue to Compare</value>
+  <data name="PhotoExternal" xml:space="preserve">
+    <value>Photo of a group of individuals</value>
   </data>
-  <data name="contsimilar" xml:space="preserve">
-    <value>Continue to Similar Search</value>
+  <data name="PhotoMember" xml:space="preserve">
+    <value>Photo of a Canadian Coast Guard member</value>
   </data>
-  <data name="infosimilar" xml:space="preserve">
-    <value>Click here for more information on the Similar Search function</value>
-  </data>
-  <data name="modalcompare" xml:space="preserve">
-    <value>&lt;p&gt;This feature allows you to compare your currently selected position with any other position in the Canadian Coast Guard. By selecting it, and then another position, the function will yield both position results side by side so that you can view the differences in location, certification, competencies, and ratings. If the position you’re comparing to is one you seek, you can then download the results, save or print, as the basis of a training plan.&lt;/p&gt;</value>
-  </data>
-  <data name="modalsimilar" xml:space="preserve">
-    <value>&lt;p&gt;This feature allows you to find positions similar to the one you’ve already selected. The search will yield percentage results by functionality (e.g. engineering, administrative, logistics, etc.). Results may not be at the same pay level as the position you’ve already selected.&lt;/p&gt;
-                    &lt;p&gt;If the position you’re comparing to (i.e. the position you’ve already selected) has certificates associated with it, there will be a box offering you to click the certificates. If you click one or more, the similar search will yield positions with those certifications, regardless of level.&lt;/p&gt;
-                    &lt;p&gt;If you don’t select a certificate or the position you’re comparing to doesn’t have a certificate associated with it, you may simply click a percentage match. Clicking on 100% will yield results at the same classification, level, and levels below and above. If you click other percentages, the results will be positions of similar functionality, but not level.&lt;/p&gt;
-                    &lt;p&gt;If you click a certification AND a percentage, the similar search will only yield positions with those certifications, regardless of level.&lt;/p&gt;</value>
-  </data>
-  <data name="PhotoCompare" xml:space="preserve">
-    <value>Photo of two job positions within the Canadian Coast Guard</value>
-  </data>
-  <data name="PhotoSimilar" xml:space="preserve">
-    <value>Photo of four job positions within the Canadian Coast Guard</value>
+  <data name="PhotoStudents" xml:space="preserve">
+    <value>Photo of students graduating</value>
   </data>
   <data name="Question1" xml:space="preserve">
-    <value>How would you like to perform your search?</value>
+    <value>To begin, tell us who you are</value>
   </data>
-  <data name="Similar" xml:space="preserve">
-    <value>Find similar positions to my current position</value>
+  <data name="searchexternal" xml:space="preserve">
+    <value>Link to search External Canadidates positions</value>
   </data>
-  <data name="Similar Function" xml:space="preserve">
-    <value>Similar Search Function</value>
+  <data name="searchmember" xml:space="preserve">
+    <value>Link to search CCG Members positions</value>
+  </data>
+  <data name="searchstudent" xml:space="preserve">
+    <value>Link to search student positions</value>
+  </data>
+  <data name="Student" xml:space="preserve">
+    <value>Student</value>
+  </data>
+  <data name="title" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="WelcomeText" xml:space="preserve">
+    <value>Welcome to the Career Competency Tool. This tool is designed to allow you to search and compare various positions within the Canadian Coast Guard.</value>
   </data>
 </root>
