--- a/Web/Resources/Pages/Index.resx
+++ b/Web/Resources/Pages/Index.resx
@@ -117,46 +117,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CCGMember" xml:space="preserve">
-    <value>CCG Member</value>
+  <data name="Certifications" xml:space="preserve">
+    <value>Certifications</value>
   </data>
-  <data name="ExternalCandidate" xml:space="preserve">
-    <value>External Candidate</value>
+  <data name="CertText" xml:space="preserve">
+    <value>Certifications indicate having successfully completed a given training program. Some certifications may vary or change, even across the same classification level.</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="Competencies" xml:space="preserve">
+    <value>Competencies</value>
   </data>
-  <data name="IndexTitle" xml:space="preserve">
+  <data name="CompText" xml:space="preserve">
+    <value>&lt;p&gt;We compiled this information from the competencies included in all job posters for the past few years. Each competency has a minimum level of proficiency needed for the position. The competencies may evolve as job requirements change within the coast guard.&lt;/p&gt;
+&lt;p&gt;We divided job competencies into three sections:&lt;/p&gt;
+&lt;ul&gt;&lt;li&gt;Knowledge elements are practical or theoretical understanding of a subject. It is the information you need (from past experience or education) to succeed in the position.&lt;/li&gt;
+&lt;li&gt;Technical elements describe abilities to apply knowledge to efficiently perform the job.&lt;/li&gt;
+&lt;li&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/li&gt;&lt;/ul&gt;</value>
+  </data>
+  <data name="continue" xml:space="preserve">
+    <value>Click here to begin</value>
+  </data>
+  <data name="Intro" xml:space="preserve">
+    <value>Introduction</value>
+  </data>
+  <data name="IntroText" xml:space="preserve">
+    <value>&lt;p&gt;The Canadian Coast Guard’s career competency tool is an online tool that provides information about the requirements for jobs across the coast guard. The tool is for both existing coast guard employees and those interested in working for the Canadian Coast Guard. For coast guard members, the tool empowers you to take charge of your own career development.&lt;/p&gt;
+&lt;p&gt;Once you identify a position, the tool also allows you to find similar positions or compare the job requirements to other positions within the coast guard. For each position, the tool provides:&lt;/p&gt;&lt;ul&gt;&lt;li&gt;a brief description&lt;/li&gt;
+&lt;li&gt;the regions with the position&lt;/li&gt;
+&lt;li&gt;certifications required for the position&lt;/li&gt;
+&lt;li&gt;a list of necessary competencies along with the level of proficiency required&lt;/li&gt;&lt;/ul&gt;</value>
+  </data>
+  <data name="Title" xml:space="preserve">
     <value>Career Competency Tool</value>
   </data>
-  <data name="PhotoExternal" xml:space="preserve">
-    <value>Photo of a group of individuals</value>
-  </data>
-  <data name="PhotoMember" xml:space="preserve">
-    <value>Photo of a Canadian Coast Guard member</value>
-  </data>
-  <data name="PhotoStudents" xml:space="preserve">
-    <value>Photo of students graduating</value>
-  </data>
-  <data name="Question1" xml:space="preserve">
-    <value>To begin, tell us who you are</value>
-  </data>
-  <data name="searchexternal" xml:space="preserve">
-    <value>Link to search External Canadidates positions</value>
-  </data>
-  <data name="searchmember" xml:space="preserve">
-    <value>Link to search CCG Members positions</value>
-  </data>
-  <data name="searchstudent" xml:space="preserve">
-    <value>Link to search student positions</value>
-  </data>
-  <data name="Student" xml:space="preserve">
-    <value>Student</value>
-  </data>
-  <data name="title" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Welcome to the Career Competency Tool. This tool is designed to allow you to search and compare various positions within the Canadian Coast Guard.</value>
+  <data name="You are here:" xml:space="preserve">
+    <value />
   </data>
 </root>
